--- a/eCatalogue-CustomerClient/src/Global/CSS/variables.css
+++ b/eCatalogue-CustomerClient/src/Global/CSS/variables.css
@@ -1,7 +1,7 @@
 :root {
-  --primary-color: #1b1b1b;
+  --primary-color: #343434;
   --secondary-color: #2a2b2d;
-  --background-color: #1f1f1f;
+  --background-color: #262422;
   --third-color: #36373a;
   --text-color: #cacbce;
   --border-color: rgba(255, 255, 255, 0.25);
