--- a/eCatalogue-CustomerClient/src/components/Header/Header.css
+++ b/eCatalogue-CustomerClient/src/components/Header/Header.css
@@ -12,6 +12,7 @@
   font-size: 30px;
   color: var(--text-color);
   background-color: var(--primary-color);
+  z-index: 9999;
   span {
     margin: 0 auto;
   }
