--- a/eCatalogue-CustomerClient/src/components/ProductCard/ProductCard.css
+++ b/eCatalogue-CustomerClient/src/components/ProductCard/ProductCard.css
@@ -1,1 +1,32 @@
 @import url("../../Global/CSS/variables.css");
+
+.productCard-container {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+  background-color: var(--primary-color);
+  gap: 5%;
+  border-radius: 5px;
+
+  box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.5);
+}
+
+.productInfo-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  /* border: 1px solid red; */
+  gap: 10px;
+}
+
+#productImg {
+  width: 40%;
+  height: auto;
+  border-radius: 5px;
+}
+
+#productTitle {
+  font-size: 26px;
+}
